final ui commit

--- a/LINKER/src/main/webapp/cart.html
+++ b/LINKER/src/main/webapp/cart.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>장바구니</title>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/cart.css">
-    <link rel="stylesheet" href="./css/writeBtn.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/cart.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/jquery-3.7.1.js"></script>
-    <script src="./js/cart.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/jquery-3.7.1.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/cart.js"></script>
 </head>
 <body>
     <div id="pop">
@@ -119,10 +118,6 @@
                 <span class="total-price">총액 : <b id="total-price">0원</b></span>
                 <button class="order-btn" disabled>주문하기</button>
             </div>
-        </div>
-
-        <div class="writeic">
-            <button class="write"><img src="img/writing_icon.png" alt="아이콘">글쓰기</button>
         </div>
     </div>
 </section>
